--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ bootloader_precompiled = "^0.2.0"
 [profile.dev]
 
 [profile.release]
+
+[package.metadata.bootimage]
+default-target = "x86_64_rustos.json"
