--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["drakemain <demain1990@gmail.com>"]
 
 [dependencies]
 bootloader_precompiled = "^0.2.0"
+volatile = "^0.2.0"
 
 [profile.dev]
 
