--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ authors = ["drakemain <demain1990@gmail.com>"]
 [dependencies]
 bootloader_precompiled = "^0.2.0"
 volatile = "^0.2.0"
+spin = "^0.4.0"
+
+[dependencies.lazy_static]
+version = "^1.0"
+features = ["spin_no_std"]
 
 [profile.dev]
 
