--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bootloader_precompiled = "^0.2.0"
 volatile = "^0.2.0"
 spin = "^0.4.0"
 array-init = "^0.0.4"
+uart_16550 = "^0.1.0"
 
 [dependencies.lazy_static]
 version = "^1.0"
